Added shortcuts widget and updated TODO.md

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ qt_add_executable(${PROJECT_NAME}
     src/FilePropertyWidget.cpp
     src/BookmarkManager.cpp
     src/BookmarkWidget.cpp
+    src/ShortcutsWidget.cpp
 
     src/FileWorker.hpp
     src/FileSystemModel.cpp
