Fixed bulk rename bug and added lua configuration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,7 @@ qt_add_executable(${PROJECT_NAME}
   src/TasksWidget.cpp
   src/Task.cpp
   src/TaskManager.cpp
+  src/RegisterWidget.cpp
 
   src/TextEdit.hpp
   src/FileWorker.hpp
@@ -79,6 +80,7 @@ qt_add_executable(${PROJECT_NAME}
   src/ImageWidget.hpp
   src/FilePreviewWorker.hpp
   src/TaskCardTemplate.hpp
+  src/OrderlessFilterModel.hpp
 )
 
 
