--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,7 @@ qt_add_executable(${PROJECT_NAME}
   src/FilePreviewWorker.hpp
   src/TaskCardTemplate.hpp
   src/OrderlessFilterModel.hpp
+  src/FileNameDelegate.hpp
 )
 
 
