Tried to add custom context menu lua API

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ qt_add_executable(${PROJECT_NAME}
   src/HookManager.cpp
   src/FileWorker.cpp
   src/Thumbnailer.cpp
+  src/ContextMenu.cpp
 
   src/TextEdit.hpp
   src/FileSystemModel.cpp
