organized pch files to pch folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -129,27 +129,27 @@ add_custom_target(run
   WORKING_DIRECTORY ${CMAKE_PROJECT_DIR}
 )
 
-target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch.hpp)
-target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch_filepanel.hpp)
-target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch_inputbar.hpp)
-target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch_statusbar.hpp)
-target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch_utils.hpp)
-target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch_filepathwidget.hpp)
-target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch_previewpanel.hpp)
-target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch_shortcutswidget.hpp)
-target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch_tableview.hpp)
-target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch_taskcardtemplate.hpp)
-target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch_task.hpp)
-target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch_taskswidget.hpp)
-target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch_thumbnailer.hpp)
-target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch_folderpropertywidget.hpp)
-target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch_fileworker.hpp)
-target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch_filesystemmodel.hpp)
-target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch_filepropertywidget.hpp)
-target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch_filepreviewworker.hpp)
-target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch_drivewidget.hpp)
-target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch_filepaneldelegate.hpp)
-target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch_mimeutils.hpp)
+target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch/pch.hpp)
+target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch/pch_filepanel.hpp)
+target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch/pch_inputbar.hpp)
+target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch/pch_statusbar.hpp)
+target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch/pch_utils.hpp)
+target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch/pch_filepathwidget.hpp)
+target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch/pch_previewpanel.hpp)
+target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch/pch_shortcutswidget.hpp)
+target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch/pch_tableview.hpp)
+target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch/pch_taskcardtemplate.hpp)
+target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch/pch_task.hpp)
+target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch/pch_taskswidget.hpp)
+target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch/pch_thumbnailer.hpp)
+target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch/pch_folderpropertywidget.hpp)
+target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch/pch_fileworker.hpp)
+target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch/pch_filesystemmodel.hpp)
+target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch/pch_filepropertywidget.hpp)
+target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch/pch_filepreviewworker.hpp)
+target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch/pch_drivewidget.hpp)
+target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch/pch_filepaneldelegate.hpp)
+target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch/pch_mimeutils.hpp)
 
 # Install the executable
 install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
