optimized for faster building

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,41 +5,55 @@ cmake_minimum_required(VERSION 3.16.0)
 project(navi VERSION 1.0.0 LANGUAGES CXX)
 
 # pick the C++ standard to use, in this case C++20
-set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_STANDARD 20 CACHE STRING "C++ standard version")
+set(CMAKE_CXX_STANDARD_REQUIRED ON CACHE BOOL "C++ standard required")
+
+find_program(SCCACHE sccache)
+find_program(CCACHE ccache)
+
+if(CCACHE)
+    set(CMAKE_C_COMPILER_LAUNCHER ${CCACHE} CACHE STRING "CCache program for C")
+    set(CMAKE_CXX_COMPILER_LAUNCHER ${CCACHE} CACHE STRING "CCache program for C++")
+elseif(SCCACHE)
+    set(CMAKE_C_COMPILER_LAUNCHER ${SCCACHE} CACHE STRING "SCCache program for C")
+    set(CMAKE_CXX_COMPILER_LAUNCHER ${SCCACHE} CACHE STRING "SCCache program for C++")
+endif()
+
 
 set(CMAKE_INSTALL_PREFIX "/usr" CACHE PATH "Install path prefix" FORCE)
 
 # Define the target directory for shared files
-set(SHAREDIR "${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME}")
+set(SHAREDIR "${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME}" CACHE PATH "/usr/share/ folder")
 
 # Enable verbose output during build
-set(CMAKE_VERBOSE_MAKEFILE ON)
+set(CMAKE_VERBOSE_MAKEFILE ON CACHE BOOL "Verbose Makefile")
 
 # Export compile_commands.json for IDE integration
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON CACHE BOOL "Export compile commands")
 
 # -O2
 # Set flags for compilers
 
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     message(STATUS "Building in Debug Mode")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -g -Og")  # Add more flags as necessary
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -g -Og -flto" CACHE STRING "C++ flags")  # Add more flags as necessary
 elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
     message(STATUS "Building in Release Mode")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")  # Add more flags as necessary
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3" CACHE STRING "C++ flags")  # Add more flags as necessary
 else()
     message(STATUS "Building in Debug Mode since no build mode was specified")
-    set(CMAKE_BUILD_TYPE "Debug")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -g -Og")  # Add more flags as necessary
+    set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Build Type" FORCE)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -g -Og -flto" CACHE STRING "C++ flags")  # Add more flags as necessary
 endif()
 
 # tell CMake to run the Qt tools moc, rcc, and uic automatically
-set(CMAKE_AUTOMOC ON)
-set(CMAKE_AUTORCC ON)
-set(CMAKE_AUTOUIC ON)
+set(CMAKE_AUTOMOC ON CACHE BOOL "CMAKE_AUTOMOC")
+set(CMAKE_AUTORCC ON CACHE BOOL "CMAKE_AUTORCC")
+set(CMAKE_AUTOUIC ON CACHE BOOL "CMAKE_AUTOUIC")
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
+set(CMAKE_EXE_LINKER_FLAGS "-fuse-ld=lld")
+
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin CACHE PATH "CMAKE runtime output directory")
 
 add_definitions( -DMAGICKCORE_QUANTUM_DEPTH=16 )
 add_definitions( -DMAGICKCORE_HDRI_ENABLE=0 )
@@ -47,9 +61,7 @@ add_definitions( -DMAGICKCORE_HDRI_ENABLE=0 )
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(POPPLER REQUIRED poppler poppler-cpp)
 pkg_check_modules(LIBARCHIVE REQUIRED libarchive)
-find_package(Qt6 REQUIRED COMPONENTS Core)
-find_package(Qt6 REQUIRED COMPONENTS Widgets)
-find_package(Qt6 REQUIRED COMPONENTS Network)
+find_package(Qt6 COMPONENTS Core Widgets Network REQUIRED)
 find_package(ImageMagick COMPONENTS Magick++ REQUIRED)
 find_package(Lua REQUIRED)
 
@@ -100,6 +112,7 @@ qt_add_executable(${PROJECT_NAME}
   src/WaitingSpinnerWidget.cpp
   src/CustomInputDialog.cpp
   src/CollapsibleWidget.cpp
+  src/StatusBar.cpp
 
   src/Globals.hpp
   src/TextEdit.hpp
@@ -119,6 +132,7 @@ qt_add_executable(${PROJECT_NAME}
 )
 
 # tell cmake to link the executable to the Qt 6 core and test modules
+
 target_link_libraries(${PROJECT_NAME} PRIVATE Qt6::Core Qt6::Widgets Qt6::Network ${ImageMagick_LIBRARIES} ${LUA_LIBRARIES} poppler poppler-cpp poppler-qt6 ${LIBARCHIVE_LIBRARIES} KDAB::kddockwidgets)
 
 set(RESOURCE_FILES
@@ -146,6 +160,8 @@ add_custom_target(run
   DEPENDS ${PROJECT_NAME}
   WORKING_DIRECTORY ${CMAKE_PROJECT_DIR}
 )
+
+set_target_properties(${PROJECT_NAME} PROPERTIES CMAKE_UNITY_BUILD ON)
 
 target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch/pch.hpp)
 target_precompile_headers(${PROJECT_NAME} PRIVATE src/pch/pch_filepanel.hpp)
