--- a/packages/PKGBUILD
+++ b/packages/PKGBUILD
@@ -6,7 +6,7 @@ pkgdesc="Highly customizable and extensible modern file manager"
 arch=('x86_64')
 url="https://github.com/dheerajshenoy/navi"
 license=('GPL3')
-depends=('qt6-base' 'qt6-svg' 'poppler-qt6' 'libarchive' 'lua' 'imagemagick' 'gcc-libs' 'glibc' 'base-devel')
+depends=('qt6-base' 'qt6-svg' 'poppler-qt6' 'libarchive' 'lua' 'imagemagick' 'gcc-libs' 'glibc' 'base-devel' 'ffmpegthumbnailer')
 makedepends=('cmake' 'ninja' 'git' 'pkgconf' 'sccache' 'ccache')
 provides=('navi')
 source=("${pkgname}-${pkgver}::git+https://github.com/dheerajshenoy/navi.git")
